fixed carousel display on mobile

--- a/assets/templates/bootstrap/css/carousel.css
+++ b/assets/templates/bootstrap/css/carousel.css
@@ -34,6 +34,7 @@
  	color:	#AD2255;
  	margin-top:0;
  	text-shadow:none;
+ 	font-size:1.1em;
  	
  }
  .carousel-caption p {
@@ -67,7 +68,7 @@
 }
 
 #about-slide{
-	height:500px;
+	height:600px;
 	
 }
 
@@ -78,7 +79,7 @@
 #about-slide .item{
 	/* background-color: #73072E;*/
 	background-color:#fff;
-	height:500px;
+	height:600px;
 	
 }
 
@@ -93,7 +94,7 @@
 
 
 #about-slide .carousel-inner > .item > img {
-	height:500px;
+	height:600px;
 	
 }
 
@@ -118,8 +119,26 @@
 	display:block;
 }
 
+#about-slide{
+	height:400px;
+	
+}
+
+
+#about-slide .item{
+	/* background-color: #73072E;*/
+	background-color:#fff;
+	height:400px;
+	
+}
+
+#about-slide .carousel-inner > .item > img {
+	height:400px;
+	
+}
 
   /* Bump up size of carousel content */
+  
   .carousel-caption p {
      font-size:0.95em;
  	
